renderer/styles/profile.module.css
.wrapper {
    height: 100%;
}

.wrapper button {
    cursor: pointer;
}

.header {
    display: grid;
    width: 100%;
    grid-template-columns: repeat(2, max-content);
    background: #f9f9f9;
}

.header h2,
.header p {
    cursor: pointer;
}

.header h2 {
    margin: 10px 0 0;
}

.header p {
    margin: 5px 0 10px;
}

.header_modal {
    background: #fff;
    border-radius: 5px 5px 0 0;
    padding: 0 5px;
}

.header_modal .pic {
    display: inline-block;
}

.header_modal .info {
    display: inline-block;
    margin-left: 10px;
    padding: 0 5px;
}

.header_modal .info h2 {
    margin: 10px 0 10px;
}

.header_modal .info h2 img {
    object-fit: cover;
    border: 1px solid #555;
    border-radius: 3px;
    width: 30px;
    height: 30px;
}

.header_modal .info h2 span {
    display: inline-block;
    vertical-align: top;
    margin-top: 7px;
    margin-left: 10px;
}

.text {
    white-space: pre-line;
}

.header_modal .info button {
    margin-right: 10px;
}

.header_modal .followers {
    margin-bottom: 10px;
}

.posts {
    max-height: calc(100vh - 285px);
    overflow: auto;
    background: #fff;
    border-radius: 0 0 5px 5px;
    padding: 10px;
}

.pic {
    vertical-align: top;
    padding: 10px 5px 6px 10px;
    cursor: pointer;
}

.pic .img {
    object-fit: cover;
    border: 1px solid #555;
    border-radius: 3px;
    width: 75px;
    height: 75px;
}

.pic div.img {
    display: inline-block;
    padding: 10px;
}

.editLink {
    font-size: 14px;
    display: inline-block;
    margin-left: 5px;
    visibility: hidden;
    color: #555;
}

:hover > .editLink {
    visibility: visible;
}

.body_modal {
    max-height: calc(100vh - 235px);
    background: #fff;
    border-radius: 0 0 5px 5px;
    padding: 10px;
    overflow: auto;
}

.followers {
    border-top: 1px solid #ccc;
    display: grid;
    max-width: 100%;
    max-height: calc(100vh - 180px);
    overflow-y: auto;
    grid-template-columns: repeat(4, 1fr);
    outline: none;
}

.body_modal .followers {
    max-height: calc(100vh - 240px);
}

.followers .row {
    display: contents;
}

.followers .imgWrapper img {
    position: absolute;
    display: block;
    top: 3px;
    left: 3px;
}

.followers .address {
    cursor: pointer;
    word-wrap: break-word;
    word-break: break-word;
}

.followers .img {
    width: 30px;
    height: 30px;
    border-radius: 2px;
}

.followers .row:hover > span,
.followers .row:hover > div {
    background: #ccc;
}

.followers .row > span,
.followers .row > div {
    padding: 5px;
}

.followers .row > div.imgWrapper {
    padding: 5px 5px 5px 40px;
    min-height: 26px;
    cursor: pointer;
    position: relative;
    word-wrap: break-word;
    word-break: break-word;
}

.followers .row:first-of-type > span,
.followers .row:first-of-type > div {
    background: #eee;
    padding: 3px 5px;
    border-right: 1px solid #ccc;
    cursor: pointer;
}

.txLink {
    cursor: pointer;
}

.followers .noFollowers {
    padding: 10px;
    text-align: center;
    grid-column: span 3;
}

.post img {
    width: 30px;
    height: 30px;
}

